# tyche

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: python-package.yml
rp3/tyche/: trace.py
rp3/tyche/detail/: distributions.py  utils.py
rp3/tyche/detail/tests/: test_distributions.py
rp3/tyche/tests/: test_trace.py
