[project]
name = "rp3.tyche"
version = "0.1.0"
description = ""
authors = [
    {name = "Ray Pauszek",email = "ray.pauszek@gmail.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy >2.0",
    "matplotlib >3.9"
]

[tool.poetry]
packages = [
    { include = "rp3/tyche" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
